force-app/main/default/objects/Account/fields/Communication_Tools__c.field-meta.xml
<CustomField>
    <fullName>Communication_Tools__c</fullName>
    <label>Communication Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aipo.com</fullName>
            </value>
            <value>
                <fullName>Alliance Gateway</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Connect</fullName>
            </value>
            <value>
                <fullName>AT&amp;T TelePresence</fullName>
            </value>
            <value>
                <fullName>Avaya Communicator</fullName>
            </value>
            <value>
                <fullName>Axigen</fullName>
            </value>
            <value>
                <fullName>Bitrix24</fullName>
            </value>
            <value>
                <fullName>Bubbl.us</fullName>
            </value>
            <value>
                <fullName>Cacoo</fullName>
            </value>
            <value>
                <fullName>CafeX</fullName>
            </value>
            <value>
                <fullName>CA Flowdock</fullName>
            </value>
            <value>
                <fullName>CalendarWiz</fullName>
            </value>
            <value>
                <fullName>CellTrust</fullName>
            </value>
            <value>
                <fullName>Cerner uCern</fullName>
            </value>
            <value>
                <fullName>ChatWork</fullName>
            </value>
            <value>
                <fullName>Cisco IPICS</fullName>
            </value>
            <value>
                <fullName>Cisco IP Interoperability and Collaboration System (IPICS)</fullName>
            </value>
            <value>
                <fullName>Cisco Jabber</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence Clinical Presence</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence Conductor</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence IX5000 Series</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence MCU 5300 Series</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence MCU MSE 8510</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence MSE 8000 Series</fullName>
            </value>
            <value>
                <fullName>Cisco TelePresence SX80 Codec</fullName>
            </value>
            <value>
                <fullName>Clickshare</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>CoSchedule</fullName>
            </value>
            <value>
                <fullName>Dropbox Paper</fullName>
            </value>
            <value>
                <fullName>Eko</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>