force-app/main/default/objects/Account/fields/CompanyNoLongerinOperation__c.field-meta.xml
<CustomField>
    <fullName>CompanyNoLongerinOperation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-463</description>
    <label>Company No Longer in Operation</label>
    <type>Checkbox</type>
</CustomField>