force-app/main/default/objects/Account/fields/Consideration__c.field-meta.xml
<CustomField>
    <fullName>Consideration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage: Consideration – individual knows they have a problem and is considering possible solutions including our services/products. Account/contact is deemed MQL when they enter this stage. BDR may examine before passing to sales. If accepted, leads are converted, and opportunity is created.</description>
    <label>Consideration</label>
    <type>Checkbox</type>
</CustomField>