force-app/main/default/objects/Account/fields/Contact_Target_Enrichment_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Target_Enrichment_Date__c</fullName>
    <description>GTMS-4100 - Set by Zoominfo/Ringlead Integration when the Lead to Contact match/enrichment was updated on any related contact.  NOTE:  Not all related contacts would be updated on this date.  Contacts with same Target Enrichment Date would apply.</description>
    <inlineHelpText>Set by Zoominfo/Ringlead Integration when the Lead to Contact match/enrichment was updated on any related contact.  NOTE:  Not all related contacts would be updated on this date.  Contacts with same Target Enrichment Date would apply.</inlineHelpText>
    <label>Contact Target Enrichment Date</label>
    <type>Date</type>
</CustomField>