force-app/main/default/objects/Account/fields/Contacted_about_Savo_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Contacted_about_Savo_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEGRATION FIELD: Used by Gainsight.</description>
    <label>Contacted about Savo Transaction</label>
    <type>Checkbox</type>
</CustomField>