force-app/main/default/objects/Account/fields/Contacts_To_Be_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Contacts_To_Be_Enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-4349 - Indicates that the contacts related to this account are flagged for enrichment.</description>
    <inlineHelpText>Indicates that the contacts related to this account are flagged for enrichment.</inlineHelpText>
    <label>Contacts To Be Enriched</label>
    <type>Checkbox</type>
</CustomField>