force-app/main/default/objects/Account/fields/Content_Repository__c.field-meta.xml
<CustomField>
    <fullName>Content_Repository__c</fullName>
    <label>Content Repository</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a-blog cms</fullName>
            </value>
            <value>
                <fullName>ACOM EZContentManager</fullName>
            </value>
            <value>
                <fullName>Acrolinx</fullName>
            </value>
            <value>
                <fullName>Advantage CSP</fullName>
            </value>
            <value>
                <fullName>Agility CMS</fullName>
            </value>
            <value>
                <fullName>Alfresco</fullName>
            </value>
            <value>
                <fullName>Alfresco Content Services</fullName>
            </value>
            <value>
                <fullName>Amadeus e-Personalise</fullName>
            </value>
            <value>
                <fullName>Amiro.CMS</fullName>
            </value>
            <value>
                <fullName>AnyDoc Software (Hyland Software)</fullName>
            </value>
            <value>
                <fullName>Apache Jackrabbit</fullName>
            </value>
            <value>
                <fullName>App Data Room</fullName>
            </value>
            <value>
                <fullName>Arc Content Management System</fullName>
            </value>
            <value>
                <fullName>Aries Systems ProduXion Manager</fullName>
            </value>
            <value>
                <fullName>Ascend ECM</fullName>
            </value>
            <value>
                <fullName>Atex Web CMS (Polopoly)</fullName>
            </value>
            <value>
                <fullName>Attachmate (Micro Focus)</fullName>
            </value>
            <value>
                <fullName>Auctori: Law</fullName>
            </value>
            <value>
                <fullName>Autonomy Interwoven ECM</fullName>
            </value>
            <value>
                <fullName>AvePoint DocAve Content Manager</fullName>
            </value>
            <value>
                <fullName>Bally CMS</fullName>
            </value>
            <value>
                <fullName>BlueCielo ECM Solutions (Formerly Cyco)</fullName>
            </value>
            <value>
                <fullName>BMC Space Expert</fullName>
            </value>
            <value>
                <fullName>Borland Optimizeit</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>BranchCache</fullName>
            </value>
            <value>
                <fullName>Broadlane CMS</fullName>
            </value>
            <value>
                <fullName>Censhare</fullName>
            </value>
            <value>
                <fullName>CentralPoint</fullName>
            </value>
            <value>
                <fullName>Centricminds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>