force-app/main/default/objects/Account/fields/ContractorAccess__c.field-meta.xml
<CustomField>
    <fullName>ContractorAccess__c</fullName>
    <label>Contractor Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>TRUE</fullName>
                <isActive>false</isActive>
                <label>TRUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>