force-app/main/default/objects/Account/fields/Conversion_Data_Center_Location__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Data_Center_Location__c</fullName>
    <label>Conversion Data Center Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>West2</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>East2</fullName>
            </value>
            <value>
                <fullName>North Central</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ANZ2</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Europe2</fullName>
            </value>
            <value>
                <fullName>Canada1</fullName>
            </value>
            <value>
                <fullName>Other (In Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>