force-app/main/default/objects/Account/fields/Conversion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Notes__c</fullName>
    <label>Conversion Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>