force-app/main/default/objects/Account/fields/Conversion_Opps_Booked__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Opps_Booked__c</fullName>
    <label>Conversion Opps Booked</label>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Conversion</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>