force-app/main/default/objects/Account/fields/Conversion_Target__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this account is targeted by the Conversion Team to move the customer from SAVO to Seismic</description>
    <label>Conversion Target</label>
    <type>Checkbox</type>
</CustomField>