force-app/main/default/objects/Account/fields/Conversion_Tenant_Data_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Tenant_Data_Pull_Date__c</fullName>
    <label>Conversion Tenant Data Pull Date</label>
    <type>Date</type>
</CustomField>