force-app/main/default/objects/Account/fields/Conversion_Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Tenant_Name__c</fullName>
    <label>Conversion Tenant Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>