force-app/main/default/objects/Account/fields/Conversion_Tenant_Setup__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Tenant_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Tenant Setup?</label>
    <type>Checkbox</type>
</CustomField>