force-app/main/default/objects/Account/fields/Copy_ai_Last_Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy_ai_Last_Research_Date__c</fullName>
    <description>Created for GTMS-4479</description>
    <label>Copy.ai Last Research Date</label>
    <type>Date</type>
</CustomField>