force-app/main/default/objects/Account/fields/CopyAI_Account__c.field-meta.xml
<CustomField>
    <fullName>CopyAI_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CopyAI Account</label>
    <type>Checkbox</type>
</CustomField>