force-app/main/default/objects/Account/fields/CopyAI_Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>CopyAI_Account_Priority__c</fullName>
    <label>CopyAI Account Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>