force-app/main/default/objects/Account/fields/CoreEnterprise123__c.field-meta.xml
<CustomField>
    <fullName>CoreEnterprise123__c</fullName>
    <formula>IF(OR 
    ( Account_Owner_Role__c =&apos;NA Core Enterprise Outside AE - 1&apos;, 
     Account_Owner_Role__c = &apos;NA Core Enterprise Outside AE - 2&apos;,
     Account_Owner_Role__c = &apos;NA Core Enterprise Outside AE - 3&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Enterprise 123</label>
    <type>Checkbox</type>
</CustomField>