force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>17hats</fullName>
            </value>
            <value>
                <fullName>1CRM</fullName>
            </value>
            <value>
                <fullName>Access CRM</fullName>
            </value>
            <value>
                <fullName>Act!</fullName>
            </value>
            <value>
                <fullName>Acteol</fullName>
            </value>
            <value>
                <fullName>AddressTwo</fullName>
            </value>
            <value>
                <fullName>AdLuge</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Agile CRM</fullName>
            </value>
            <value>
                <fullName>Aislelabs</fullName>
            </value>
            <value>
                <fullName>AltaReturn CRM</fullName>
            </value>
            <value>
                <fullName>Amdocs Clarify CRM</fullName>
            </value>
            <value>
                <fullName>amoCRM</fullName>
            </value>
            <value>
                <fullName>Aplicor 3C CRM</fullName>
            </value>
            <value>
                <fullName>Apptivo</fullName>
            </value>
            <value>
                <fullName>Aptean Onyx CRM</fullName>
            </value>
            <value>
                <fullName>Aptean Pivotal CRM</fullName>
            </value>
            <value>
                <fullName>Aptos Clienteling</fullName>
            </value>
            <value>
                <fullName>Aptos CRM</fullName>
            </value>
            <value>
                <fullName>Ardexus</fullName>
            </value>
            <value>
                <fullName>Argus Lease CRM</fullName>
            </value>
            <value>
                <fullName>Ascendix</fullName>
            </value>
            <value>
                <fullName>Astute Solutions ePowerCenter</fullName>
            </value>
            <value>
                <fullName>Autotask PSA</fullName>
            </value>
            <value>
                <fullName>AVALOQ</fullName>
            </value>
            <value>
                <fullName>Avature CRM</fullName>
            </value>
            <value>
                <fullName>AXLR8</fullName>
            </value>
            <value>
                <fullName>Backstop</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Batchbook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>