force-app/main/default/objects/Account/fields/CS_Segment_Leader__c.field-meta.xml
<CustomField>
    <fullName>CS_Segment_Leader__c</fullName>
    <label>CS Segment Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>