force-app/main/default/objects/Account/fields/CS_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>CS_Team_Lead__c</fullName>
    <label>CS Team Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>