force-app/main/default/objects/Account/fields/CSM_AM__c.field-meta.xml
<CustomField>
    <fullName>CSM_AM__c</fullName>
    <label>CSM/AM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>