force-app/main/default/objects/Account/fields/Current_FY_Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Marketing_Strategy__c</fullName>
    <label>Current FY Marketing Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Strategy_ABX</valueSetName>
    </valueSet>
</CustomField>