force-app/main/default/objects/Account/fields/Current_Sales_Enablement_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Enablement_Solution__c</fullName>
    <label>Current Sales Enablement Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accent</fullName>
            </value>
            <value>
                <fullName>Attach</fullName>
            </value>
            <value>
                <fullName>BigTinCan</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Brainshark</fullName>
            </value>
            <value>
                <fullName>BriteVerify</fullName>
            </value>
            <value>
                <fullName>BuyerDeck</fullName>
            </value>
            <value>
                <fullName>Buzzboard</fullName>
            </value>
            <value>
                <fullName>Callidus Cloud</fullName>
            </value>
            <value>
                <fullName>Channel Rocket</fullName>
            </value>
            <value>
                <fullName>Clearslide</fullName>
            </value>
            <value>
                <fullName>CloudApp</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>ConnectAndSell</fullName>
            </value>
            <value>
                <fullName>ContentRaven</fullName>
            </value>
            <value>
                <fullName>DocSend</fullName>
            </value>
            <value>
                <fullName>Docurated</fullName>
            </value>
            <value>
                <fullName>Drawloop</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Filepad</fullName>
            </value>
            <value>
                <fullName>FISION</fullName>
            </value>
            <value>
                <fullName>Fluent</fullName>
            </value>
            <value>
                <fullName>GenY</fullName>
            </value>
            <value>
                <fullName>Groove</fullName>
            </value>
            <value>
                <fullName>Guidewire Digital Portals</fullName>
            </value>
            <value>
                <fullName>Guru</fullName>
            </value>
            <value>
                <fullName>Heartbeats</fullName>
            </value>
            <value>
                <fullName>Highspot</fullName>
            </value>
            <value>
                <fullName>Home Grown</fullName>
            </value>
            <value>
                <fullName>HubSpot Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>