force-app/main/default/objects/Account/fields/CurrentTerritory__c.field-meta.xml
<CustomField>
    <fullName>CurrentTerritory__c</fullName>
    <label>Current Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>