force-app/main/default/objects/Account/fields/CurrentTerritorySegment__c.field-meta.xml
<CustomField>
    <fullName>CurrentTerritorySegment__c</fullName>
    <description>This is used in the automation and the value is the Territory Segment field.</description>
    <label>Current Territory Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>