force-app/main/default/objects/Account/fields/Custom_Integration__c.field-meta.xml
<CustomField>
    <fullName>Custom_Integration__c</fullName>
    <inlineHelpText>Please enter any integrations that don&apos;t exist in the direct/indirect dropdowns. These will be added to the drop-downs periodically.</inlineHelpText>
    <label>Custom Integration(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>