force-app/main/default/objects/Account/fields/Customer_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Date__c</fullName>
    <description>Created for GTMS-1664</description>
    <label>Customer Acquisition Date</label>
    <type>Date</type>
</CustomField>