force-app/main/default/objects/Account/fields/Customer_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Customer_Integrations__c</fullName>
    <label>Customer Integrations - MAP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Oracle Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Adobe Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>IBM Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Epsilon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>