force-app/main/default/objects/Account/fields/Customer_Integrations_Content_Repos__c.field-meta.xml
<CustomField>
    <fullName>Customer_Integrations_Content_Repos__c</fullName>
    <label>Customer Integrations - Content Repos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe Experience Manager</fullName>
            </value>
            <value>
                <fullName>Aprimo</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Internal Network Drive</fullName>
            </value>
            <value>
                <fullName>Kapost</fullName>
            </value>
            <value>
                <fullName>SFDC Libraries</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>Sitecore</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
            <value>
                <fullName>Workfront</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>