force-app/main/default/objects/Account/fields/Customer_Integrations_CRM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Integrations_CRM__c</fullName>
    <label>Customer Integrations - CRM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>Oracle CRM</fullName>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
            <value>
                <fullName>Satuit</fullName>
            </value>
            <value>
                <fullName>SalesPage</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Homegrown CRM</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>