force-app/main/default/objects/Account/fields/Customer_Integrations_LMS__c.field-meta.xml
<CustomField>
    <fullName>Customer_Integrations_LMS__c</fullName>
    <label>Customer Integrations - LMS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MindTickle</fullName>
            </value>
            <value>
                <fullName>Brainshark</fullName>
            </value>
            <value>
                <fullName>Learncore</fullName>
            </value>
            <value>
                <fullName>KnowledgeVision</fullName>
            </value>
            <value>
                <fullName>Saba</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>CornerStone OnDemand</fullName>
            </value>
            <value>
                <fullName>Lessonly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>