force-app/main/default/objects/Account/fields/Customer_Integrations_Third_Party_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Integrations_Third_Party_Data__c</fullName>
    <label>Customer Integrations - Third Party Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morningstar</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>S&amp;P Global Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Oracle Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>Factset</fullName>
            </value>
            <value>
                <fullName>Adobe Experience Manager</fullName>
            </value>
            <value>
                <fullName>Sitecore</fullName>
            </value>
            <value>
                <fullName>D&amp;B Hoovers</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Internal Data Systems (in house customer data systems)</fullName>
            </value>
            <value>
                <fullName>Eagle Investment Systems</fullName>
            </value>
            <value>
                <fullName>Nielsen &amp; IRI</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>