force-app/main/default/objects/Account/fields/Customer_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Customer_Intelligence__c</fullName>
    <description>REQ7071</description>
    <label>Customer Intelligence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Artesian</fullName>
            </value>
            <value>
                <fullName>atEvent</fullName>
            </value>
            <value>
                <fullName>BuiltWith</fullName>
            </value>
            <value>
                <fullName>Callidus Quota Management</fullName>
            </value>
            <value>
                <fullName>Camcard</fullName>
            </value>
            <value>
                <fullName>CIENCE</fullName>
            </value>
            <value>
                <fullName>Clari</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Datafox</fullName>
            </value>
            <value>
                <fullName>Datahug</fullName>
            </value>
            <value>
                <fullName>Datanyze</fullName>
            </value>
            <value>
                <fullName>DemandScience / Pure b2b</fullName>
            </value>
            <value>
                <fullName>EasyLeadz</fullName>
            </value>
            <value>
                <fullName>etailinsights</fullName>
            </value>
            <value>
                <fullName>Experian AutoCount</fullName>
            </value>
            <value>
                <fullName>FullContact</fullName>
            </value>
            <value>
                <fullName>Gong</fullName>
            </value>
            <value>
                <fullName>GovTech Navigator</fullName>
            </value>
            <value>
                <fullName>Growbots</fullName>
            </value>
            <value>
                <fullName>Gryphon Sales Intelligence</fullName>
            </value>
            <value>
                <fullName>HG Data</fullName>
            </value>
            <value>
                <fullName>InsideView</fullName>
            </value>
            <value>
                <fullName>InsideView Insights</fullName>
            </value>
            <value>
                <fullName>Introhive</fullName>
            </value>
            <value>
                <fullName>LeadIQ</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Lusha</fullName>
            </value>
            <value>
                <fullName>MediaRadar</fullName>
            </value>
            <value>
                <fullName>Mobivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>