force-app/main/default/objects/Account/fields/Customer_Operating_System_s__c.field-meta.xml
<CustomField>
    <fullName>Customer_Operating_System_s__c</fullName>
    <label>Customer Operating System(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Mac OS</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>